<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cpecGrey"
    >


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/privacySwitch"
        style="@style/SwitchCPECStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@id/privacyWebView" />

        <WebView
            android:id="@+id/privacyWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toTopOf="parent"
            />
    <!--            app:layout_constraintBottom_toBottomOf="@id/guideline3"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/guideline11" -->

<!--        <androidx.constraintlayout.widget.Guideline-->
<!--            android:id="@+id/guideline3"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintGuide_percent="0.9" />-->

<!--        <androidx.constraintlayout.widget.Guideline-->
<!--            android:id="@+id/guideline11"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintGuide_percent="0.12" />-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteColor"
            android:text="@string/i_want_to_donate_my_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/guideline18"
            app:layout_constraintTop_toBottomOf="@id/privacyWebView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:translationY="-1dp"
          />

<!--    <View-->
<!--        android:id="@+id/divider2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:background="@android:color/black"-->
<!--        android:translationY="1dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/privacyWebView" />-->

    <!--        <Button-->
<!--            android:id="@+id/privacyDismissButton"-->
<!--            style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textSize="12sp"-->
<!--            android:text="@string/close"-->
<!--            android:textColor="@color/lighGrey"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/privacyWebView"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>