<resources>
    <string name="app_name">LolaDrives</string>
    <string name="refresh">refresh device list</string>
    <string name="send">Send</string>
    <string name="receive">receive</string>
    <string name="textview">TextView</string>
    <string name="elm_command">ELM Command</string>
    <string name="textviewspeedobd">TextView</string>
    <string name="textviewrpmobd">TextView</string>
    <string name="startMonitoring">Start Monitoring</string>
    <string name="home">Home</string>
    <string name="tracking">Live Monitoring</string>
    <string name="headerpic">HeaderPic</string>
    <string name="headertext">  LolaDrives</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="dRDE">dRDE</string>
    <string name="selectText">Select your OBD Bluetooth Device from the List below</string>
    <string name="connectiontv">Connection Status:   </string>
    <string name="not_connected">not connected</string>
    <string name="connected">connected</string>
    <string name="obd_command">OBD Command</string>
    <string name="obd_response_will_appear_here">OBD Response will appear here</string>
    <string name="appearText">OBD Response will appear here</string>
    <string name="pressStart">Press Start to begin tracking</string>
    <string name="upload_and_delete">Donate Data</string>
    <string name="select_your_tracking_profile_from_the_list_below">Select your tracking profile from the list below</string>
    <string name="add_profile">add Profile</string>
    <string name="editprofile">EditProfile</string>
    <string name="profilename">profileName</string>
    <string name="_1">-1</string>
    <string name="select_the_commands_that_you_want_to_be_tracked_n_and_add_individual_frequencies_1_for_single_execution">Select the commands that you want to be tracked</string>
    <string name="profile_name">Profile Name</string>
    <string name="save_profile">Save profile</string>
    <string name="event_name">Event Name</string>
    <string name="value">Value</string>
    <string name="unit">Unit</string>
    <string name="now_viewing_file_test">Now viewing file test</string>
    <string name="type">TYPE</string>
    <string name="stopRDE">Stop RDE Test</string>
    <string name="stopMonitoring">Stop Monitoring</string>
    <string name="command_name">Command Name</string>
    <string name="ms">ms</string>
    <string name="minus">-</string>
    <string name="rde">RDE</string>
    <string name="chart">Chart</string>
    <string name="timestamp">timestamp</string>
    <string name="speed_45_km_h">Speed : 45 km/h</string>
    <string name="titleText">LolaDrives</string>
    <string name="settings">Settings</string>
    <string name="live_monitoring">Live Monitoring</string>
    <string name="rde_settings">RDE Settings</string>
    <string name="profiles">Monitoring Profiles</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">History</string>
    <string name="privacy">Privacy</string>
    <string name="i_want_to_donate_my_data">Enable data donations:</string>
    <string name="rdeSum">RDE Summary</string>
    <string name="continue_button">Continue Button</string>
    <string name="bluetoothNote">Note: Only paired devices show up here. Go to Android\'s Bluetooth settings to pair a new device.</string>
    <string name="obd_comm_err">LolaDrives had problems communicating with your vehicle, make sure your engine is on and please try again</string>
    <string name="my_cars">My Cars</string>
</resources>
