...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <ImageView
        android:id="@+id/privacyImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="0dp"
        android:paddingEnd="10dp"
        android:src="@drawable/privacy_icon"
        app:layout_constraintBottom_toBottomOf="@id/guideLineButtonsLower3"
...
