...

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/backButton"
                android:layout_width="28dp"
                android:layout_height="28dp"
                app:srcCompat="@drawable/back_arrow_icon"
                tools:ignore="VectorDrawableCompat"
                app:tint="@color/cpecBlue" />

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="LolaDrives"
                android:layout_gravity="left"
                android:textSize="20sp"
...
