<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfilesFragment.ProfilesFragment">


    <ListView
        android:id="@+id/profileList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectProfileLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:choiceMode="singleChoice"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/selectProfileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_tracking_profile_from_the_list_below"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"/>

    <ImageButton
        android:id="@+id/addProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_action_add_profile"
        app:layout_constraintLeft_toRightOf="@id/selectProfileLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profileList"
        android:contentDescription="@string/add_profile"
        android:layout_marginBottom="18dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>