<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/profilename"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentLeft="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="15dp"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        tools:ignore="RelativeOverlap" />

    <RadioButton
        android:id="@+id/profileRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:focusable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="false"/>
    <ImageButton
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/editprofile"
        android:background="@drawable/ic_action_edit_profile"
        android:layout_marginEnd="10dp"
        android:focusable="false"
        android:layout_toLeftOf="@id/profileRadioButton"
        android:layout_toStartOf="@id/profileRadioButton" />
</RelativeLayout>